tests/ui/lint/snapshots/match_as_if_let_multi_variant_wildcard.snap
---
source: tests/ui/lint/mod.rs
---
  [info] `match` reducible to `if let`
   ╭─[test.lis:5:3]
 4 │ pub fn test(s: Signal) {
 5 │   match s {
   ·   ──┬──
   ·     ╰── can be simpler
 6 │     Signal.Red => { let _ = 1 },
   ╰────
  help: Replace this `match` with `if let Signal.Red = value { ... }` · code: [lint.match_as_if_let]
