tests/ui/lint/snapshots/match_as_if_let_preserves_binding_name.snap
---
source: tests/ui/lint/mod.rs
---
  ● `match` reducible to `if let`
   ╭─[test.lis:3:3]
 2 │ pub fn test(opt: Option<int>) {
 3 │   match opt {
   ·   ──┬──
   ·     ╰── can be simpler
 4 │     Some(inner) => { let _ = inner },
   ╰────
  help: Replace this `match` with `if let Some(inner) = value { ... }` · code: [lint.match_as_if_let]
