tests/ui/lint/snapshots/match_on_bool_true_false.snap
---
source: tests/ui/lint/mod.rs
---
  ● Match on boolean
   ╭─[test.lis:3:3]
 2 │ pub fn test(b: bool) -> int {
 3 │   match b {
   ·   ──┬──
   ·     ╰── should be `if`
 4 │     true => 1,
   ╰────
  help: A `match` on a boolean is better written as an `if` expression · code: [lint.match_on_bool]
