tests/ui/lint/snapshots/match_on_literal_tuple.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Ineffective match
   ╭─[test.lis:3:9]
 2 │ fn main() {
 3 │   match (1, 2) {
   ·         ───┬──
   ·            ╰── already known
 4 │     _ => (),
   ╰────
  help: Matching on a literal is ineffective, because this always succeeds. Did you mean to match on a variable? · code: [lint.match_on_literal]
