tests/ui/lint/snapshots/match_on_nested_paren_literal_tuple.snap
---
source: tests/ui/lint/mod.rs
---
  ● Unnecessary parens
   ╭─[test.lis:3:9]
 2 │ fn main() {
 3 │   match (((1, 2))) {
   ·         ─────┬────
   ·              ╰── remove parens
 4 │     _ => (),
   ╰────
  help: Lisette does not require parens around `match` conditions · code: [lint.excess_parens_on_condition]
